# parlai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Formula/: README.md  parlai.rb
docs/: README.md  adding-a-provider.md  architecture.md  design-decisions.md  gemini-batchexecute.md  providers.md
src/parlai/: __main__.py  auth.py  cli.py  dates.py  db.py  log.py  models.py  paths.py  render.py
src/parlai/providers/: __init__.py  _gemini_internal.py  aistudio.py  base.py  chatgpt.py  claude.py  claude_code.py  codex.py  gemini.py  perplexity.py
tests/: test_parsers.py
