[project]
name = "parlai"
version = "0.1.0"
description = "Unified CLI for personal AI chat history across ChatGPT, Claude, Gemini, AI Studio, Perplexity, and Claude Code."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "browser-cookie3>=0.20",
  "rich>=13",
  "platformdirs>=4",
  "gemini-webapi>=2.0.0",
  "fonttools>=4.62.1",
]

[project.optional-dependencies]
gemini = ["gemini-webapi>=1.21"]

[project.scripts]
parlai = "parlai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parlai"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
